Bug 253895 - Crash under NetworkProcess::addAllowedFirstPartyForCookies()
Summary: Crash under NetworkProcess::addAllowedFirstPartyForCookies()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-14 11:59 PDT by Chris Dumez
Modified: 2023-03-14 15:35 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-03-14 11:59:23 PDT
Crash under NetworkProcess::addAllowedFirstPartyForCookies():
 WTF::HashTable<WebCore::RegistrableDomain, WebCore::RegistrableDomain, WTF::IdentityExtractor, WTF::DefaultHash<WebCore::RegistrableDomain>, WTF::HashTraits<WebCore::RegistrableDomain>, WTF::HashTraits<WebCore::RegistrableDomain> >::add(WebCore::RegistrableDomain&&) <==
        8 WebKit::NetworkProcess::addAllowedFirstPartyForCookies(WTF::ObjectIdentifier<WebCore::ProcessIdentifierType>, WebCore::RegistrableDomain&&, WTF::CompletionHandler<void ()>&&)
          8 auto WebKit::WebSharedWorkerServer::createContextConnection(WebCore::RegistrableDomain const&, WebCore::RegistrableDomain const&, std::__1::optional<WTF::ObjectIdentifier<WebCore::ProcessIdentifierType> >)::$_5::operator()<WTF::ObjectIdentifier<WebCore::ProcessIdentifierType> >(WTF::ObjectIdentifier<WebCore::ProcessIdentifierType>) const
            6 WTF::Detail::CallableWrapper<IPC::Connection::sendMessageWithAsyncReply(WTF::UniqueRef<IPC::Encoder>&&, IPC::Connection::AsyncReplyHandler, WTF::OptionSet<IPC::SendOption>, std::__1::optional<WTF::Thread::QOS>)::$_9, void>::call()
Comment 1 Chris Dumez 2023-03-14 11:59:34 PDT
<rdar://104526219>
Comment 2 Chris Dumez 2023-03-14 12:01:51 PDT
Pull request: https://github.com/WebKit/WebKit/pull/11506
Comment 3 EWS 2023-03-14 15:35:45 PDT
Committed 261656@main (e2b561a545d3): <https://commits.webkit.org/261656@main>

Reviewed commits have been landed. Closing PR #11506 and removing active labels.