Crash under NetworkProcess::addAllowedFirstPartyForCookies() https://bugs.webkit.org/show_bug.cgi?id=253895 rdar://104526219

Reviewed by Alex Christensen.

Make sure the registrable domain is valid before we try inserting it into the
HashSet.

* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::addAllowedFirstPartyForCookies):

Canonical link: https://commits.webkit.org/261656@main